force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/BMCServiceDesk__Change_Request_Service_Target__c.object-meta.xml
<CustomObject>
    <description>This object will store and track change request service target transaction records.</description>
    <label>Change Request Service Target</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ChangeRequestServiceTarget#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request Service Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>