force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__Change_Request__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Change_Request__c</fullName>
    <formula>BMCServiceDesk__FKChangeRequest__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Request~</label>
    <type>Text</type>
</CustomField>