force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__ClockPauseDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClockPauseDate__c</fullName>
    <description>Date when clock was paused.</description>
    <label>Clock Pause Date</label>
    <type>DateTime</type>
</CustomField>