force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__ClockState__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClockState__c</fullName>
    <label>Clock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>