force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__FKChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChangeRequest__c</fullName>
    <label>Change Request</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Change Request Service Targets</relationshipLabel>
    <relationshipName>Change_Request_Service_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>