force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__FKServiceTarget__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKServiceTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Target</label>
    <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
    <relationshipLabel>Change Request Service Targets</relationshipLabel>
    <relationshipName>Change_Request_Service_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>