force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__FKSLA__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA</label>
    <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
    <relationshipLabel>Change Request Service Targets</relationshipLabel>
    <relationshipName>Change_Request_Service_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>