force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__IsCanceled__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if SLA Transaction record gets canceled.</description>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>