force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__RelativeElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RelativeElapsedTime__c</fullName>
    <label>Relative Elapsed Time in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>