force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__ServiceTargetName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceTargetName__c</fullName>
    <formula>BMCServiceDesk__FKServiceTarget__r.BMCServiceDesk__Service_Target_Title__c</formula>
    <label>Target Title</label>
    <type>Text</type>
</CustomField>