force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status__c</fullName>
    <formula>IF( BMCServiceDesk__IsCanceled__c  =  True , $Label.bmcservicedesk__servicetargetstatus_cancelled, 
   IF( ISNULL( BMCServiceDesk__TargetEndDate__c ) , $Label.bmcservicedesk__servicetargetstatus_ok, 
      IF( ISNULL( BMCServiceDesk__EndDate__c ), 
        IF( ISNULL( BMCServiceDesk__ClockPauseDate__c ) ,    
           IF( BMCServiceDesk__TargetEndDate__c &gt;  NOW() ,  IF(  ISNULL(BMCServiceDesk__WarningTime__c)  || BMCServiceDesk__WarningTime__c  &gt;  NOW() , $Label.bmcservicedesk__servicetargetstatus_ok, $Label.bmcservicedesk__servicetargetstatus_warning) , $Label.bmcservicedesk__servicetargetstatus_missed) ,  IF( BMCServiceDesk__TargetEndDate__c &gt;  BMCServiceDesk__ClockPauseDate__c ,  IF(  ISNULL(BMCServiceDesk__WarningTime__c)  || BMCServiceDesk__WarningTime__c  &gt;  BMCServiceDesk__ClockPauseDate__c , $Label.bmcservicedesk__servicetargetstatus_ok, $Label.bmcservicedesk__servicetargetstatus_warning) , $Label.bmcservicedesk__servicetargetstatus_missed)),     
         IF( BMCServiceDesk__EndDate__c  - BMCServiceDesk__TargetEndDate__c &gt; 0, $Label.bmcservicedesk__servicetargetstatus_missed, $Label.bmcservicedesk__servicetargetstatus_met
         ) 
      ) 
   ) 
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>