force-app/main/default/objects/BMCServiceDesk__Change_Request_Service_Target__c/fields/BMCServiceDesk__WarningTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__WarningTime__c</fullName>
    <label>Warning Time</label>
    <type>DateTime</type>
</CustomField>